Update Action containers.

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -63,6 +63,10 @@ jobs:
           - image: "docker-ubuntu-systemd"
             tag: "latest"
           - image: "docker-ubuntu-systemd"
+            tag: "lunar"
+          - image: "docker-ubuntu-systemd"
+            tag: "noble"
+          - image: "docker-ubuntu-systemd"
             tag: "focal"
     steps:
       - name: Checkout Role
@@ -85,7 +89,7 @@ jobs:
       - uses: "actions/checkout@master"
       - name: Dependabot metadata
         id: metadata
-        uses: dependabot/fetch-metadata@v1
+        uses: dependabot/fetch-metadata@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Approve a PR
