--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -46,27 +46,23 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "debian-systemd"
+          - image: "docker-molecule-images"
             tag: "latest"
-          - image: "debian-systemd"
+          - image: "docker-molecule-images"
             tag: "bullseye"
-          - image: "debian-systemd"
+          - image: "docker-molecule-images"
             tag: "buster"
           - image: "enterpriselinux"
             tag: "8"
           - image: "enterpriselinux"
             tag: "latest"
-          - image: "fedora-systemd"
-            tag: "38"
-          - image: "docker-opensuse-systemd"
-            tag: "latest"
-          - image: "docker-ubuntu-systemd"
-            tag: "latest"
-          - image: "docker-ubuntu-systemd"
-            tag: "lunar"
-          - image: "docker-ubuntu-systemd"
-            tag: "noble"
-          - image: "docker-ubuntu-systemd"
+          - image: "docker-molecule-images"
+            tag: "fedora38"
+          - image: "docker-molecule-images"
+            tag: "opensuse"
+          - image: "docker-molecule-images"
+            tag: "jammy"
+          - image: "docker-molecule-images"
             tag: "focal"
     steps:
       - name: Checkout Role
