--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -47,7 +47,7 @@ jobs:
       matrix:
         config:
           - image: "docker-molecule-images"
-            tag: "latest"
+            tag: "bookworm"
           - image: "docker-molecule-images"
             tag: "bullseye"
           - image: "docker-molecule-images"
